zurück-button bei previous assignments hinzugefügt

--- a/previous_assignments.html
+++ b/previous_assignments.html
@@ -70,6 +70,9 @@
             </tr>
         </tbody>
     </table>
+    <div id="backButtonContainer">
+        <button id="backButton">&#9166;</button>
+    </div>
     </div>
     <script src="previous_assignments.js"></script>
 </body>
