chat mit popup fenster hinzugefügt

--- a/previous_assignments.html
+++ b/previous_assignments.html
@@ -73,6 +73,17 @@
     <div id="backButtonContainer">
         <button id="backButton">&#9166;</button>
     </div>
+
+    <button id="chatButton">💬</button>
+    <div id="chatPopup" class="hidden">
+        <div id="chatHeader">
+            <h3>Studenten-Gruppenchat:</h3>
+            <span id="closeChatButton">x</span>
+        </div>
+        <input type="text" id="chatInput" placeholder="Schreibe eine Nachricht..." />
+        <button id="sendMessage">Senden</button>
+    </div>
+
     </div>
     <script src="previous_assignments.js"></script>
 </body>
