--- a/tutor-dashboard.html
+++ b/tutor-dashboard.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tutor-Dashboard</title>
-    <link rel="stylesheet" href="style_tutor.css"
+    <link rel="stylesheet" href="style_tutor.css">
+    <link rel="icon" type="image/png" sizes="16x16" href="/icon/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/icon/favicon-32x32.png">
+    <link rel="apple-touch-icon" href="/icon/apple-touch-icon.png">
 </head>
 <body>
     <div id="header">
