added logo-button navigating back to login page

--- a/previous_assignments.html
+++ b/previous_assignments.html
@@ -12,6 +12,9 @@
 <body>
     <div id="header">
         <h1>Previous Assignments</h1>
+        <a href="index.html" class="logo-button">
+            <img src="icon/apple-touch-icon.png" alt="Logo" class="logo-image">
+        </a>   
     </div>
 
     <div id="container">
